# Enhanced-Voice-Recorder

./: README.md  index.html  package-lock.json  package.json
src/: datahandler.ts  main.ts  record.ts  row.ts  style.css  timer.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/handlers/: dataHandler.ts  notice.ts  noticeHandler.ts  record.ts  rowHandler.ts
src/styles/: main-style.css  set-save-folder-style.css
